sync brick collections, and items
